--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -5,7 +5,8 @@
         Header
     </div>
     <div class="overflow-hidden display-flex justify-content-center align-items-center">
-        <img src="../../assets/Images/mobiles/10/1.jpg" alt="" class="card-img-top">
+        <img src="../../assets/Images/mobiles/10/1.jpg" alt="" class="card-img-top" OpenProductDetails
+        [productId]="1">
     </div>
 
     <div class="card-body">
@@ -34,7 +35,9 @@
     <div class="card">
         <div class="row">
             <div class="col-md-4 mt-5 overflow-hidden display-flex justify-content-center align-items-center ">
-                <img src="../../assets/Images/mobiles/10/1.jpg" alt="" class="img-fluid rounded-start">
+                <img src="../../assets/Images/mobiles/10/1.jpg" alt="" class="img-fluid rounded-start"
+                OpenProductDetails
+                [productId]="1">
             </div>
             <div class="col d-flex flex-column">
                 <div class="card-header text-center text-success">Header</div>
@@ -68,7 +71,9 @@
     <div class="card">
         <div class="row g-0">
             <div class="col-4 overflow-hidden d-flex justify-content-center align-items-center">
-                <img src="../../assets/Images/mobiles/10/1.jpg" class="img-fluid rounded-start" alt="prod img">
+                <img src="../../assets/Images/mobiles/10/1.jpg" class="img-fluid rounded-start" alt="prod img"
+                OpenProductDetails
+                [productId]="1">
             </div>
             <div class="col-8">
                 <div class="card-body">
@@ -90,7 +95,9 @@
 <div class="cart-item-view" *ngIf="view == 'prevcartitem'" >
     <div class="card text-center">
         <div class="overflow-hidden d-flex justify-content-center align-items-center">
-            <img src="../../assets/Images/mobiles/10/1.jpg" alt="" class="card-img-top">
+            <img src="../../assets/Images/mobiles/10/1.jpg" alt="" class="card-img-top"
+            OpenProductDetails
+              [productId]="1">
 
         </div>
 
