--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,11 @@
     box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
     /*  */
 }
+
+.my-rounded-corner{
+    border-radius: 1rem;
+}
+
+.modal-backdrop.fade.show{
+    z-index: 19;
+}
